# path-compressed-trie

./: AUTHORS  Makefile.am  README  README.md  configure.ac  pctrie.c  pctrie.h
tests/: basic.c  radix.c  radix.h
